// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Blockquote alignment="left" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote alignment="right" 1`] = `
<blockquote
  className="uu5-bricks-blockquote blockquote-reverse"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote background=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote background=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote uu5-bricks-blockquote-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote checkGrammar=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote checkGrammar=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote checkHighlight=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote checkHighlight=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote checkSpaces=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote checkSpaces=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote className="my-classname" 1`] = `
<blockquote
  className="uu5-bricks-blockquote my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="brown" 1`] = `
<blockquote
  className="color-schema-brown uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="brown-rich" 1`] = `
<blockquote
  className="color-schema-brown-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="cyan" 1`] = `
<blockquote
  className="color-schema-cyan uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="cyan-rich" 1`] = `
<blockquote
  className="color-schema-cyan-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="default" 1`] = `
<blockquote
  className="color-schema-default uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="green" 1`] = `
<blockquote
  className="color-schema-green uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="green-rich" 1`] = `
<blockquote
  className="color-schema-green-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="grey" 1`] = `
<blockquote
  className="color-schema-grey uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="grey-rich" 1`] = `
<blockquote
  className="color-schema-grey-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="orange" 1`] = `
<blockquote
  className="color-schema-orange uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="orange-rich" 1`] = `
<blockquote
  className="color-schema-orange-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="pink" 1`] = `
<blockquote
  className="color-schema-pink uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="pink-rich" 1`] = `
<blockquote
  className="color-schema-pink-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="purple" 1`] = `
<blockquote
  className="color-schema-purple uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="purple-rich" 1`] = `
<blockquote
  className="color-schema-purple-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="red" 1`] = `
<blockquote
  className="color-schema-red uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="red-rich" 1`] = `
<blockquote
  className="color-schema-red-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="yellow" 1`] = `
<blockquote
  className="color-schema-yellow uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote colorSchema="yellow-rich" 1`] = `
<blockquote
  className="color-schema-yellow-rich uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote content="This is Content from ContentMixin" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</blockquote>
`;

exports[`UU5.Bricks.Blockquote content=12345 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</blockquote>
`;

exports[`UU5.Bricks.Blockquote controlled=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote controlled=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote default props 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote disabled=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote disabled=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</blockquote>
`;

exports[`UU5.Bricks.Blockquote dynamic=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote dynamic=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote footer=undefined 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote footerAlignment="left" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote footerAlignment="right" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote hidden=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote hidden=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote id="myId" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote ignoreHTML=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote ignoreHTML=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote mainAttrs=undefined 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote name="myName" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="bigBox" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="bigBoxCollection" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="box" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="boxCollection" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="container" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-blockquote uu-bricks-c3o8km"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="page" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-blockquote uu-bricks-c3o8km"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-blockquote uu-bricks-c3o8km"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote nestingLevel="spa" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote noIndex=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote noIndex=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote noSpacing=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote noSpacing=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote uu5-bricks-blockquote-nospacing"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote pureRender=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote pureRender=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote selected=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote selected=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote style="padding:8px; borderRadius: 2px" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote style={"backgroundColor":"red","color":"blue"} 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote textCorrector=false 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote textCorrector=true 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Blockquote tooltip="My Tooltip" 1`] = `
<blockquote
  className="uu5-bricks-blockquote"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
